--- a/paginaWeb/css/styles.css
+++ b/paginaWeb/css/styles.css
@@ -6,11 +6,12 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #000;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    color: #000000;
 }
 
 .container {
@@ -38,6 +39,7 @@ body {
 
 .login-form h2 {
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .input-group {
@@ -70,7 +72,8 @@ button:hover {
     background-color: #218838;
 }
 
-/* Estilos resposive */
+
+
 @media (max-width: 600px) {
     .container {
         flex-direction: column;
